force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <description
  >A deliverable milestone within an engagement phase. On Fixed Price engagements, achieving a milestone drives a billing event.</description>
    <label>Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>