force-app/main/default/objects/Milestone__c/fields/Achieved__c.field-meta.xml
<CustomField>
    <fullName>Achieved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the milestone has been achieved.</description>
    <label>Achieved</label>
    <type>Checkbox</type>
</CustomField>