force-app/main/default/objects/Milestone__c/fields/Achieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Date__c</fullName>
    <description>Date the milestone was marked achieved. Stamped by automation.</description>
    <label>Achieved Date</label>
    <type>Date</type>
</CustomField>