force-app/main/default/objects/Milestone__c/fields/Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount__c</fullName>
    <description>Amount to bill when this milestone is achieved (Fixed Price engagements).</description>
    <label>Billing Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>