force-app/main/default/objects/Milestone__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date the milestone is due.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>