force-app/main/default/objects/Milestone__c/fields/Engagement_Phase__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Phase__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The phase this milestone belongs to.</description>
    <label>Engagement Phase</label>
    <referenceTo>EngagementPhase__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>